syntax = "proto3";

package me.pgthinker.message;


option java_multiple_files = false;
option java_package = "me.pgthinker.enums";
option java_outer_classname = "CmdTypeProto";



// 传输数据的指令类型
enum CmdType {
    HEARTBEAT = 0; // 心跳检测
    AUTH = 1; // 认证
    AUTH_OK = 2; // 认证通过
    AUTH_ERR = 3; // 认证失败
    CONNECT = 4; // 连接
    DISCONNECT = 5; // 断开连接
    TRANSFER = 6; // 数据传输
    OPEN_SERVER = 7; // 开启代理端口
    CLOSE_SERVER = 8; // 关闭代理端口
}
